# 6DOF_RobotArmSim

./: .gitignore  CMakeLists.txt
arm/: arm_attributes.h  calculations.cpp  get_path.cpp  main.cpp  render.cpp
include/: arm_attributes.h  calculations.h  get_path.h  render.h
include/glad/: glad.h
src/: calculations.cpp  get_path.cpp  glad.c  main.cpp  render.cpp
